<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
    <item
        android:id="@+id/txtallrestaurants"
        android:title="@string/all_restaurants"
        android:icon="@drawable/ic_icon_allrestaurants" />

    <item
        android:id="@+id/txtfavorites"
        android:title="@string/favorite_restaurants"
        android:icon="@drawable/ic_icon_favorites" />

    <item
        android:id="@+id/txtorderhistory"
        android:title="@string/order_history"
        android:icon="@drawable/ic_icon_orderhistory"
        app:showAsAction="never"/>

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">


                <item
                    android:id="@+id/txtfaq"
                    android:title="@string/faqs"
                    android:icon="@drawable/ic_icon_faq"
                    app:showAsAction="never"/>


    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">

    <item
        android:id="@+id/txtlogout"
        android:title="@string/logout"
        android:icon="@drawable/ic_icon_logout"
        app:showAsAction="never"/>

    </group>



</menu>