<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/login_screen_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txthellothere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/hello_there"
        android:textAllCaps="true"
        android:textSize="45sp"
        android:fontFamily="@font/bangers"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>


    <EditText
        android:id="@+id/edtxtmobilenologin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/edittext_login_background"
        android:drawableLeft="@drawable/ic_icon_mobile"
        android:drawableTint="@color/login"
        android:fontFamily="@font/ubuntu_light"
        android:hint="@string/enter_username"
        android:inputType="number"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txthellothere"/>

    <EditText
        android:id="@+id/edtxtpasswordlogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColorHint="@color/login"
        android:fontFamily="@font/ubuntu_light"
        android:drawableLeft="@drawable/ic_icon_password"
        android:drawableTint="@color/white"
        android:background="@drawable/edittext_login_background"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtxtmobilenologin"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/ubuntu_light"
        android:background="@drawable/custom_button"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_below="@id/edtxtpasswordlogin"/>

    <TextView
        android:id="@+id/txtforgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:linksClickable="true"
        android:textColor="@color/login"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_light"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@id/btnlogin"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/txtnewuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="none"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/new_user_register_here"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>