<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@drawable/resetpassword_screen_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtnewuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_and_e_mail_here"
        android:textColor="@color/white"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:textSize="13sp"
        android:padding="10dp"
        android:fontFamily="@font/ubuntu_light"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>


    <EditText
        android:id="@+id/edtxtphonenoresetpassword"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:textSize="12sp"
        android:drawableLeft="@drawable/ic_icon_mobile"
        android:padding="8dp"
        android:textColorHint="@color/white"
        android:background="@drawable/edittext_background"
        android:inputType="number"
        android:fontFamily="@font/ubuntu_light"
        android:layout_gravity="center_horizontal"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edtxtemailresetpassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:textSize="12sp"
        android:drawableLeft="@drawable/ic_icon_email"
        android:padding="8dp"
        android:textColorHint="@color/white"
        android:fontFamily="@font/ubuntu_light"
        android:background="@drawable/edittext_background"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnsendotp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:textSize="12sp"
        android:padding="9dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/ubuntu_light"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtotpmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_is_sent_only_once_in_24hrs"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu_light"
        android:layout_marginTop="30dp"/>

</LinearLayout>